[package]
name = "chum_bucket_lab"
version = "0.1.0"
authors = ["Steven Casper <sebastiancasper3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
reqwest = {version="0.10.4", features=["blocking"]}
byteorder = "1"
sha-1="0.9.4"

[dependencies.druid]
version = "0.7.0"
features = ["im"]